[package]
name = "tiny-renderer"
version = "0.1.0"
authors = ["arrayJY <ji957455952@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.12"
generic-array  = "0.14"
winit = "0.24.0"
tobj = "2.0.4"
winapi = "0.3.9"
raw-window-handle = "0.3.3"
image = "0.23.13"
minifb = "0.20"
rand = "0.8.5"
indicatif = "0.16.2"

[dependencies.gltf]
version = "1.0"
features = ["extras", "names", "KHR_materials_specular", "KHR_lights_punctual", "KHR_materials_pbrSpecularGlossiness", "KHR_materials_ior"]
